cfn_benchmark/cfn_templates/aws-samples__sample-s3-batch-automated-extraction/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Stack for extraction of TAR folders

Parameters:
  # Extract Logic file name
  extractLogicFileName:
    Type: String
    Description: 'Enter the name of the ExtractLogic code file name with extension'
    Default: 'ExtractLogic.sh'

  # Batch Configuration
  batchVpcCidr:
    Type: String
    Description: 'CIDR for the Compute VPC that Batch will create'
    Default: '10.0.0.0/16'

  sourcePath:
    Type: String
    Description: 'Full path of on the host EC2 that will be mounted on the container'
    Default: '/extractedData'

  sourcePathName:
    Type: String
    Description: 'Name of the source path'
    Default: 'hostVolume'

  volumeSize:
    Type: String
    Description: 'Size of the EBS volume to create and attach'
    Default: '40'

  # Container Image URI
  ecrImageArn:
    Type: String
    Description: 'URI of the Docker Image stored in ECR Repo'

  # Prefix for naming
  namingPrefix:
    Type: String
    Description: 'Unique prefix to name resources'
    Default: 'batch-extract'
    AllowedPattern: "^[a-z0-9-]+$"
    ConstraintDescription: "Use lowercase letters, numbers, and hyphens only."

Resources:
  # S3 Bucket
  s3Bucket:
    Type: AWS::S3::Bucket
    UpdateReplacePolicy: 'Retain'
    DeletionPolicy: 'Retain'
    Properties:
      BucketName: !Join
        - '-'
        - - !Ref 'namingPrefix'
          - "bucket"
          - !Select [4, !Split ['-', !Select [2, !Split ['/', !Ref 'AWS::StackId']]]]
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: 'AES256'
      NotificationConfiguration:
        EventBridgeConfiguration:
          EventBridgeEnabled: true
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      VersioningConfiguration:
        Status: Enabled

  # IAM Roles
  # Allow ECS to call varios services
  batchExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join [ '-', [!Ref namingPrefix, 'BatchExecutionRole']]
      Description: 'IAM Role used in Batch Job Definition'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: 'Allow'
            Principal:
              Service: 'ecs-tasks.amazonaws.com'
            Sid: ''

  # Allow SSM access to EC2 instance and also allow the EC2 to call ECR
  instanceRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join [ '-', [!Ref namingPrefix, 'InstanceRole']]
      Description: 'IAM Role used by Batch EC2'
      ManagedPolicyArns:
        - 'arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role'
        - 'arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: 'Allow'
            Principal:
              Service: 'ec2.amazonaws.com'
            Sid: ''
      Policies:
        - PolicyName: !Join [ '-', [!Ref namingPrefix, 'Instance-S3Access']]
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - 's3:GetObject'
                  - 's3:PutObject'
                Resource: !Join [ '', ['arn:aws:s3:::', !Ref s3Bucket, '/*']]
              - Effect: Allow
                Action:
                  - 's3:ListBucket'
                Resource: !Join [ '', ['arn:aws:s3:::', !Ref s3Bucket]]

  instanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: !Join [ '-', [!Ref instanceRole, 'InstanceProfile']]
      Roles:
        - !Ref instanceRole

  # Allow Eventbridge to call Batch SubmitJob
  eventbridgeBatchRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Join [ '-', [!Ref namingPrefix, 'EventBridgeBatchRole']]
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Action: 'sts:AssumeRole'
            Effect: 'Allow'
            Principal:
              Service: 'events.amazonaws.com'
            Sid: ''
      Policies:
        - PolicyName: !Join [ '-', [!Ref namingPrefix, 'Events-BatchAccess']]
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Action: 'batch:SubmitJob'
                Effect: 'Allow'
                Resource: '*'

  # EC2/VPC Resources
  # Batch VPC with 3 subnets in 3 AZs
  batchVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref batchVpcCidr
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'Compute-VPC']]

  batchVpcSubnetAz1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
        - 0
        - !GetAZs
          Ref: AWS::Region
      CidrBlock: !Select [ 0, !Cidr [!Ref batchVpcCidr, 3, 8] ]
      VpcId: !Ref batchVpc

  batchVpcSubnetAz2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
      - 1
      - !GetAZs
        Ref: AWS::Region
      CidrBlock: !Select [ 1, !Cidr [!Ref batchVpcCidr, 3, 8] ]
      VpcId: !Ref batchVpc

  batchVpcSubnetAz3:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Select
      - 2
      - !GetAZs
        Ref: AWS::Region
      CidrBlock: !Select [ 2, !Cidr [!Ref batchVpcCidr, 3, 8] ]
      VpcId: !Ref batchVpc

  # Route Table associated with all 3 subnets
  batchVpcRtb:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref batchVpc
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'RouteTable']]

  batchVpcRtbAssociationSubnetAz1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref batchVpcRtb
      SubnetId: !Ref batchVpcSubnetAz1

  batchVpcRtbAssociationSubnetAz2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref batchVpcRtb
      SubnetId: !Ref batchVpcSubnetAz2

  batchVpcRtbAssociationSubnetAz3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref batchVpcRtb
      SubnetId: !Ref batchVpcSubnetAz3

  # SG for Batch EC2 allowing HTTP/HTTPS access from anywhere
  ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join [ '-', [!Ref namingPrefix, 'Compute-SecurityGroup']]
      GroupDescription: !Join [ '-', [!Ref namingPrefix, 'Compute-SecurityGroup']]
      VpcId: !Ref batchVpc
      SecurityGroupEgress:
        - Description: 'Allow all outbound'
          CidrIp: '0.0.0.0/0'
          IpProtocol: '-1'

  # SG for Interface Endpoints
  endpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Join [ '-', [!Ref namingPrefix, 'Endpoints-SecurityGroup']]
      GroupDescription: !Join [ '-', [!Ref namingPrefix, 'Endpoints-SecurityGroup']]
      VpcId: !Ref batchVpc
      SecurityGroupEgress:
        - Description: 'Allow all outbound'
          CidrIp: '0.0.0.0/0'
          IpProtocol: '-1'
      SecurityGroupIngress:
        - Description: 'Allow HTTP inbound from Compute VPC CIDR'
          CidrIp: !Ref batchVpcCidr
          IpProtocol: 'tcp'
          FromPort: 80
          ToPort: 80
        - Description: 'Allow HTTPS inbound from Compute VPC CIDR'
          CidrIp: !Ref batchVpcCidr
          IpProtocol: 'tcp'
          FromPort: 443
          ToPort: 443

  # VPC Endpoints
  s3GatewayEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Gateway'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.s3'
      VpcId: !Ref batchVpc
      RouteTableIds:
        - !Ref batchVpcRtb
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'S3']]

  cloudwatchInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.logs'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'CloudWatch-Logs']]

  ecrApiInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ecr.api'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'ECRAPI']]

  ecrDkrInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ecr.dkr'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'ECR-DockerRegistry']]

  ecsInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ecs'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'ECS']]

  ecsAgentInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ecs-agent'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'ECS-Agent']]

  ssmInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssm'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'SSM']]

  ssmMessagesInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ssmmessages'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'SSM-Messages']]

  ec2MessagesInterfaceEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcEndpointType: 'Interface'
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.ec2messages'
      VpcId: !Ref batchVpc
      SubnetIds:
        - !Ref batchVpcSubnetAz1
        - !Ref batchVpcSubnetAz2
        - !Ref batchVpcSubnetAz3
      SecurityGroupIds:
        - !Ref endpointSecurityGroup
      PrivateDnsEnabled: true
      Tags:
        - Key: 'Name'
          Value: !Join [ '-', [!Ref namingPrefix, 'EC2-Messages']]

  # Launch Template creates a gp3 volume of size 40G
  # Userdata mounts the EBS volume on the EC2 instance
  ec2LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Join [ '-', [!Ref namingPrefix, 'LaunchTemplate']]
      LaunchTemplateData:
        MetadataOptions:
          HttpTokens: required
        BlockDeviceMappings:
          - DeviceName: '/dev/xvdba'
            Ebs:
              DeleteOnTermination: true
              Encrypted: false
              VolumeType: 'gp3'
              VolumeSize: !Ref volumeSize
        UserData:
          Fn::Base64: !Sub
            - |
              MIME-Version: 1.0
              Content-Type: multipart/mixed; boundary="==MYBOUNDARY=="

              --==MYBOUNDARY==
              Content-Type: text/x-shellscript; charset="us-ascii"

              #!/bin/bash
              VOLUME_NAME=$(lsblk -o NAME,SIZE | grep ${volumeSize} | awk '{print $1}')
              echo "VOLUME_NAME - $VOLUME_NAME"

              MOUNT_POINT=${sourcePath}
              mkfs -t xfs /dev/$VOLUME_NAME
              mkdir -p $MOUNT_POINT
              mount /dev/$VOLUME_NAME $MOUNT_POINT

              cp /etc/fstab /etc/fstab.orig
              VOLUME_ID=$(lsblk -o UUID -nr /dev/$VOLUME_NAME)
              if [[ ! -z $VOLUME_ID ]]
                then
                  tee -a /etc/fstab <<EOF
                  UUID=$VOLUME_ID  $MOUNT_POINT  xfs  defaults,nofail  0  2
              EOF
                fi
              fi
              echo "EBS Volume Mounted Successfully."
              --==MYBOUNDARY==--
            - volumeSize: !Ref volumeSize
              sourcePath: !Ref sourcePath

  # Batch
  batchJobDefinition:
    Type: AWS::Batch::JobDefinition
    Properties:
      JobDefinitionName: !Join [ '-', [!Ref namingPrefix, 'JobDefinition']]
      Type: 'container'
      ContainerProperties:
        Image: !Ref ecrImageArn
        ExecutionRoleArn: !GetAtt batchExecutionRole.Arn
        Volumes:
          - Host:
              SourcePath: !Ref sourcePath
            Name: !Ref sourcePathName
        MountPoints:
          - ContainerPath: '/tmpDir'
            SourceVolume: !Ref sourcePathName
        Environment:
          - Name: 'BATCH_FILE_S3_URL'
            Value: !Join [ '/', ['s3:/', !Ref s3Bucket, 'scripts', !Ref extractLogicFileName]]
        User: 'root'
        ResourceRequirements:
          - Type: 'VCPU'
            Value: '1'
          - Type: 'MEMORY'
            Value: '2048'

  batchComputeEnvironment:
    Type: 'AWS::Batch::ComputeEnvironment'
    DependsOn:
      - ssmInterfaceEndpoint
      - ec2MessagesInterfaceEndpoint
      - ssmMessagesInterfaceEndpoint
    Properties:
      ComputeEnvironmentName: !Join [ '-', [!Ref namingPrefix, 'ComputeEnvironment']]
      Type: 'MANAGED'
      State: 'ENABLED'
      ComputeResources:
        Type: 'EC2'
        Ec2Configuration:
          - ImageType: 'ECS_AL2'
        DesiredvCpus: 1
        MinvCpus: 1
        MaxvCpus: 4
        InstanceTypes:
          - 'optimal'
        Subnets:
          - !Ref batchVpcSubnetAz1
          - !Ref batchVpcSubnetAz2
          - !Ref batchVpcSubnetAz3
        LaunchTemplate:
          LaunchTemplateId: !Ref ec2LaunchTemplate
          Version: '$Latest'
        InstanceRole: !GetAtt instanceProfile.Arn
        SecurityGroupIds:
          - !Ref ec2SecurityGroup

  batchJobQueue:
    Type: AWS::Batch::JobQueue
    Properties:
      JobQueueName: !Join [ '-', [!Ref namingPrefix, 'JobQueue']]
      ComputeEnvironmentOrder:
        - ComputeEnvironment: !Ref batchComputeEnvironment
          Order: 1
      Priority: 0
      State: 'ENABLED'

  # Eventbridge Rule
  eventBridgeRule:
    Type: AWS::Events::Rule
    Properties:
      Name: !Join [ '-', [!Ref namingPrefix, 'EventRule']]
      State: 'ENABLED'
      EventPattern:
        detail-type:
          - 'Object Created'
        source:
          - 'aws.s3'
        detail:
          bucket:
            name:
              - !Ref s3Bucket
          object:
            key:
              - suffix: '.tar'
      Targets:
        - Id: 'Batch-Job-Target'
          BatchParameters:
            JobName: 'ExtractJob'
            JobDefinition: !Ref batchJobDefinition
          InputTransformer:
            InputPathsMap:
              objectKey: '$.detail.object.key'
            InputTemplate: "{\n\"ContainerOverrides\": {\n\"Environment\"\
              : [\n{\n\"Name\": \"BATCH_FILE_S3_KEY\",\n\
              \ \"Value\": <objectKey>\n}\n]\n\
              \ }\n}"
          Arn: !GetAtt batchJobQueue.JobQueueArn
          RoleArn: !GetAtt eventbridgeBatchRole.Arn

Outputs:
  s3Bucket:
    Description: 'S3 Bucket created for the TAR folder and the extracted files'
    Value: !Ref s3Bucket

  batchJobDefinition:
    Description: 'Batch Job Definition'
    Value: !Ref batchJobDefinition

  batchComputeEnvironment:
    Description: 'Batch Compute Environment'
    Value: !Ref batchComputeEnvironment

  eventBridgeRule:
    Description: 'Eventbridge Rule to submit a Batch Job'
    Value: !Ref eventBridgeRule
